# rust-yaml-linter

./: Cargo.toml  Dockerfile  README.md
.github/workflows/: docker-publish.yml
src/: generate-yaml.rs  main.rs
testData/test1/: file-1.yaml
testData/test1/test1-a/: file-3.yaml
testData/test2/: file-2.yaml
testData/test2/test2-a/: file-4.yaml  file-5-invalid.yaml
