[package]
name = "rust-yaml-linter"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.4", features = ["derive"] }
walkdir = "2.5.0"
yaml-rust2 = "0.8.0"
jwalk = "0.5"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
rand = "0.8"

[[bin]]
name = "main"
path = "src/main.rs"

[[bin]]
name = "generate-yaml"
path = "src/generate-yaml.rs"